--- a/frontend/src/components/navbar/Navbar.module.css
+++ b/frontend/src/components/navbar/Navbar.module.css
@@ -1,7 +1,6 @@
 .header {
     height: 56px;
-    margin-bottom: 120px;
-    background-color: var(--mantine-color-body);
+    background-color: var(--mantine-color-blueShades-6);
     border-bottom: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
     padding-left: var(--mantine-spacing-md);
     padding-right: var(--mantine-spacing-md);
@@ -23,8 +22,8 @@
     color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
     font-size: var(--mantine-font-size-sm);
     font-weight: 500;
-  
-    @mixin hover {
-      background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
-    }
+  }
+
+  .search {
+    background-color: var(--mantine-color-blueShades-6);
   }
