--- a/frontend/src/components/navbar/Navbar.module.css
+++ b/frontend/src/components/navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .header {
     height: 56px;
-    background-color: var(--mantine-color-blueShades-6);
+    background-color: var(--mantine-color-cyan-5);
     border-bottom: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
     padding-left: var(--mantine-spacing-md);
     padding-right: var(--mantine-spacing-md);
